--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ terraform.tfvars
 *.tfvars
 .aws/
 credentials
+secrets.auto.tfvars
 
 # Scripts temporales
 set_env.sh
@@ -28,3 +29,7 @@ set_env.sh
 # Sistema operativo
 .DS_Store
 Thumbs.db
+
+# Archivos de plan
+*.tfplan
+plan.out
